<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.abongcher.tbec.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_image"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_log"
        android:orderInCategory="100"
        android:title="@string/action_view_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_log"
        android:orderInCategory="100"
        android:title="@string/action_clear_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_data"
        android:orderInCategory="100"
        android:title="@string/action_delete_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_all_data"
        android:orderInCategory="100"
        android:title="@string/action_save_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_quiry"
        android:orderInCategory="100"
        android:title="@string/action_send_quiry"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_send_balance"
        android:orderInCategory="100"
        android:title="@string/action_send_balance"
        app:showAsAction="never"/>

</menu>
